css/styles.css
/* import fonts */
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,900&display=swap');
/* Font awesome icons */
@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');

*{
    padding: 0;
    margin: 0;
}

body{
    font-family: 'Roboto', sans-serif;
}

img{
    border-radius: 10px;
}

/* helper css */
.full-height{
    height: 100vh !important;
}
/* helper css */

.navbar-brand{
    font-size: 2rem;
}

.banner-title{
    font-size: 4rem;
    font-family: 'Noto Serif', serif;
}
.banner-image{
    width: 60%;
}

.feature-card{
    text-align: center;
    padding: 2.5rem 1rem;
    background-color: #eee;
}
.feature-card .icon{
    background-color: white;
    border-radius: 10px;
    width: 4rem;
    height: 4rem;
    display: grid;
    align-items: center;
    justify-content: center;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 1rem;
}
.feature-card .icon i{
    font-size: 2rem;
}

.section-img-80{
    width: 80%;
}
.section-img-100{
    width: 100%;
}
.section-video{
    width: 100%;
    aspect-ratio: 3 / 2;
}
.section-title{
    font-size: 3rem;
    font-family: 'Noto Serif', serif;
}

